// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component matches open snapshot 1`] = `
<div
  className="css-rr5oyj"
>
  <div
    className="css-9wswc1"
    onClick={[Function]}
  >
    <svg
      fill="none"
      height={32}
      icon="menu"
      stroke="#EAE2EB"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={32}
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="3"
        x2="21"
        y1="12"
        y2="12"
      />
      <line
        x1="3"
        x2="21"
        y1="6"
        y2="6"
      />
      <line
        x1="3"
        x2="21"
        y1="18"
        y2="18"
      />
    </svg>
  </div>
  <div
    className="css-wmwfnm"
  >
    <div
      className="css-1md845p"
      data-testid="breath-player"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-1ffd92o"
        style={
          Object {
            "borderRadius": "30vh",
            "height": "30vh",
            "left": "50%",
            "marginLeft": "-15vh",
            "marginTop": "-15vh",
            "top": "50%",
            "transform": "scale(1)",
            "transition": "width 0.7s ease-in-out,height 0.7s ease-in-out,margin-left 0.7s ease-in-out,margin-top 0.7s ease-in-out,border-radius 0.7s ease-in-out",
            "width": "30vh",
          }
        }
      />
      <div
        className="css-baoxwl"
        style={
          Object {
            "borderRadius": "30vh",
            "height": "30vh",
            "left": "50%",
            "marginLeft": "-15vh",
            "marginTop": "-15vh",
            "top": "50%",
            "transform": "scale(1)",
            "transition": "width 0.7s ease-in-out,height 0.7s ease-in-out,margin-left 0.7s ease-in-out,margin-top 0.7s ease-in-out,border-radius 0.7s ease-in-out",
            "width": "30vh",
          }
        }
      />
      <div
        className="css-1ez1fyi"
        style={Object {}}
      >
        <h2
          className="css-hih133"
        >
          Breathe in
        </h2>
      </div>
      <div
        className="css-1ez1fyi"
        style={
          Object {
            "opacity": 0,
            "transform": "scale(1.1)",
          }
        }
      >
        <h2
          className="css-hih133"
        >
          Breathe out
        </h2>
      </div>
      <h4
        className="css-7rvuyr"
        data-testid="breath-player--count"
      >
        5
      </h4>
      <div
        className="css-1dt2cma"
        onClick={[Function]}
        style={
          Object {
            "opacity": 0,
            "transform": "scale(1.1)",
          }
        }
      >
        <div
          className="css-upe1zs"
        />
        <div
          className="css-upe1zs"
        />
      </div>
    </div>
  </div>
  <div
    className="css-19sk4h4"
  >
    <div
      className="css-aq08jq"
    >
      <span
        className="css-7son14"
      >
        <div
          className="css-m89b1l"
        />
        <div
          className="css-wuflo1"
        >
          Take a break
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Header component matches snapshot 1`] = `
<div
  className="css-rr5oyj"
>
  <div
    className="css-76bosp"
    onClick={[Function]}
  >
    <svg
      fill="none"
      height={32}
      icon="menu"
      stroke="#EAE2EB"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={32}
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="3"
        x2="21"
        y1="12"
        y2="12"
      />
      <line
        x1="3"
        x2="21"
        y1="6"
        y2="6"
      />
      <line
        x1="3"
        x2="21"
        y1="18"
        y2="18"
      />
    </svg>
  </div>
  <div
    className="css-sdhbkc"
  >
    <div
      className="css-1ckxn53"
      data-testid="breath-player"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="css-1ffd92o"
        style={
          Object {
            "borderRadius": 80,
            "height": 40,
            "left": "50%",
            "marginLeft": -20,
            "marginTop": -20,
            "top": "50%",
            "transform": "scale(1)",
            "transition": "width 0.7s ease-in-out,height 0.7s ease-in-out,margin-left 0.7s ease-in-out,margin-top 0.7s ease-in-out,border-radius 0.7s ease-in-out",
            "width": 40,
          }
        }
      />
      <div
        className="css-baoxwl"
        style={
          Object {
            "borderRadius": 80,
            "height": 40,
            "left": "50%",
            "marginLeft": -20,
            "marginTop": -20,
            "top": "50%",
            "transform": "scale(1)",
            "transition": "width 0.7s ease-in-out,height 0.7s ease-in-out,margin-left 0.7s ease-in-out,margin-top 0.7s ease-in-out,border-radius 0.7s ease-in-out",
            "width": 40,
          }
        }
      />
    </div>
  </div>
  <div
    className="css-19sk4h4"
  >
    <div
      className="css-aq08jq"
    >
      <span
        className="css-7son14"
      >
        <div
          className="css-m89b1l"
        />
        <div
          className="css-wuflo1"
        >
          Take a break
        </div>
      </span>
    </div>
  </div>
</div>
`;
